fix: Fixed to switch images with z-index.

--- a/lesson17/style.css
+++ b/lesson17/style.css
@@ -18,7 +18,6 @@ h1{
 p{
     margin:15px 0px;
 }
-
 /*ローディング*/
 .loading{
     text-align: center;
@@ -30,32 +29,40 @@ p{
 .slider{
     position: relative;
     text-align: center;
-    width: 100%;
-    max-width: 800px;
-    padding: 50px;
-    margin: 50px auto;
-    background: #fff;
+    height: 80vh;
+    width: auto;
+    height: 440px;
+    max-width: 600px;
+    margin: auto;
+    padding:50px;
 }
 .slider__item{
-    display: none;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    left: 0;
     text-align: center;
-    background: #fff;
-    padding: 30px;
-    width: 100%;
+    z-index: 0;
+    padding: 50px;
 }
 .slider__item.is-active{
-    display: block;
+    z-index: 1;
 }
 .slide-image{
     width: 100%;
 }
-
+@media(max-width:414px){
+    .slider{
+        width: auto;
+        height: 290px;
+    }
+}
 /*ボタン*/
 .slider-btn{
     position: absolute;
     font-size: 1rem;
     color:#5d5d5d;
-    top: 50%;
+    top: calc(50% + 50px);
     background: #fff;
     border: 2px solid #5b5b5b;
     padding: 8px 10px;
@@ -70,11 +77,11 @@ p{
     pointer-events: none;
 }
 .prev-btn{
-    left: 20px;
+    left: 0;
     transform: rotate( 90deg );
 }
 .next-btn{
-    right: 20px;
+    right: 0;
     transform: rotate( -90deg );
 }
 .prev-btn:before,.next-btn:before{
@@ -83,13 +90,21 @@ p{
 
 /*ページナンバー*/
 .page-number{
+    position: absolute;
+    bottom:-70px;
+    right: 0;
+    left: 0;
     font-size:1.5rem;
     text-align: center;
     letter-spacing: 0.5rem;
     width: 100%;
     z-index: 999;
-    margin:5px 0px;
 }
 .current-number{
     color:#db0206;
+}
+@media(max-width:414px){
+    .page-number{
+        bottom: -90px;
+    }
 }
